# fmr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: cache.rs  commands.rs  config.rs  git.rs  main.rs  status_cache.rs  ui.rs
