[package]
name = "fmr"
version = "0.4.2"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
self_update = "0.41"
walkdir = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
reqwest = { version = "0.12", features = ["blocking"] }
rayon = "1"